--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,17 @@
 name: Cypress Tests
 
-on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: '0 12 * * 1'
-  workflow_dispatch:
+on: push
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14.x'
+    - name: Install dependencies
+      run: npm install
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Start server
-        run: npm run start
-
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v2
-        with:
-          start: npm run start
-          wait-on: 'https://example.cypress.io'
+    - name: Run Cypress tests
+      run: npx cypress run
