--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,14 @@
-name: Cypress Tests
-
-on: push
+name: Run Cypress Tests
+on:
+  schedule:
+    - cron: '55 21 * * *' # run the tests every day at 7:00 AM (UTC)
 
 jobs:
-  build:
+  cypress-tests:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run Cypress tests
-      run: npx cypress run
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Cypress tests
+        run: npm run cy:run
