--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run Cypress tests
         run: npx cypress run
